--- a/imagesaver.css
+++ b/imagesaver.css
@@ -1,3 +1,16 @@
-.toSave {
-	border:1px gray;
+body {
+	min-width: 830px;
+	overflow-x: hidden;
+}
+
+img {
+	margin: 5px;
+	max-width: 400px;
+}
+
+.download {
+	border: 3px solid red;
+}
+.downloaded {
+	border: 3px solid blue;
 }
