Migrates parts to AngularJS and mdl
Moves js files to js directory
Starts by making popup.html use Angular
Adds in a little of google's MDL

Todo: buttons

--- a/imagesaver.css
+++ b/imagesaver.css
@@ -1,11 +1,15 @@
 body {
-	min-width: 800px;
+	min-width: 900px;
 	overflow-x: hidden;
 }
 
 img {
 	margin: 5px;
-	max-width: 350px;
+	max-width: 250px;
+}
+
+.image_card {
+	display: inline-block;
 }
 
 .download {
